# SoundTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: setup.bat
src/: main.cpp
